--- a/Dreamy/app/src/main/res/layout/activity_main.xml
+++ b/Dreamy/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".Main"
-    android:background="#ffc3faff"
-    android:clickable="false">
+    android:background="#ffffff"
+    android:clickable="false"
+    android:focusableInTouchMode="false"
+    android:focusable="false"
+    android:longClickable="false">
 
     <TextView
         android:text="Dreamy"
