--- a/Dreamy/app/src/main/res/layout/dreamy_form.xml
+++ b/Dreamy/app/src/main/res/layout/dreamy_form.xml
@@ -9,7 +9,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".DreamyHome"
-    android:id="@+id/">
+    android:id="@+id/abc">
 
     <TextView
             android:text="@string/app_name"
@@ -42,7 +42,8 @@
             android:id="@+id/milestone"
             android:layout_toStartOf="@+id/editText"
             android:layout_centerVertical="true"
-            android:layout_toLeftOf="@+id/title" />
+            android:layout_alignRight="@+id/editText2"
+            android:layout_alignEnd="@+id/editText2" />
 
         <EditText
             android:layout_width="wrap_content"
