--- a/Dreamy/app/src/main/res/layout/todolist.xml
+++ b/Dreamy/app/src/main/res/layout/todolist.xml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/">
+    android:id="@+id/abc">
 
     <TextView
         android:layout_width="wrap_content"
