Create a 'ToDoList' Activity
- Java file added
- Necessary changes to some xml files for adding the new activity

--- a/Dreamy/app/src/main/res/menu/main.xml
+++ b/Dreamy/app/src/main/res/menu/main.xml
@@ -5,4 +5,9 @@
         android:title="@string/action_settings"
         android:orderInCategory="100"
         android:showAsAction="never" />
+
+    <item android:id="@+id/to_do_list"
+        android:title="To Do List"
+        android:orderInCategory="100"
+        android:showAsAction="never" />
 </menu>
