--- a/Dreamy/app/src/main/res/layout/dreamy_form_row.xml
+++ b/Dreamy/app/src/main/res/layout/dreamy_form_row.xml
@@ -5,16 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/delMilestone"
-        android:layout_alignParentRight="true"
+    <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Delete"/>
+        android:id="@+id/delMilestone"
+        android:layout_alignParentRight="true"
+        android:layout_marginLeft="45dp"
+        android:background="@drawable/remove_form" />
+
     <TextView
-        android:id="@+id/textout"
+        android:id="@+id/milestoneOut"
         android:layout_alignParentLeft="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toLeftOf="@id/delMilestone"/>
+
+
+
 </RelativeLayout>
