--- a/Dreamy/app/src/main/res/layout/todolist.xml
+++ b/Dreamy/app/src/main/res/layout/todolist.xml
@@ -12,45 +12,9 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="To Do List"
         android:id="@+id/textTitle"
-        android:textSize="48dp"
+        android:textSize="32dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="72dp" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textField1"
-        android:layout_marginTop="83dp"
-        android:text="add a task                            "
-        android:layout_below="@+id/textTitle"
-        android:layout_alignLeft="@+id/textTitle" />
-
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/checkBox1"
-        android:checked="false"
-        android:layout_alignTop="@+id/textField1"
-        android:layout_toLeftOf="@+id/textField1" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText4"
-        android:layout_below="@+id/textField1"
-        android:layout_alignLeft="@+id/textField1"
-        android:layout_marginTop="19dp"
-        android:layout_alignRight="@+id/textTitle" />
-
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/checkBox3"
-        android:checked="false"
-        android:layout_alignBaseline="@+id/editText4"
-        android:layout_alignBottom="@+id/editText4"
-        android:layout_toLeftOf="@+id/editText4" />
+        android:layout_centerHorizontal="true" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -58,8 +22,42 @@
         android:layout_height="wrap_content"
         android:text="+"
         android:id="@+id/btnAdd"
-        android:layout_below="@+id/editText4"
-        android:layout_alignLeft="@+id/checkBox3"
-        android:layout_marginTop="65dp" />
+        android:layout_column="22"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true" />
+
+    <TableLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tableTaskList"
+        android:layout_below="@+id/btnAdd">
+
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/rowTask">
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/checkBox1"
+                android:layout_column="1"
+                android:checked="false"
+                android:layout_alignTop="@+id/textField1"
+                android:layout_toLeftOf="@+id/textField1" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textField1"
+                android:layout_marginTop="83dp"
+                android:layout_column="2"
+                android:text="add a task                            "
+                android:layout_below="@+id/textTitle"
+                android:layout_alignLeft="@+id/textTitle" />
+
+
+        </TableRow>
+    </TableLayout>
 
 </RelativeLayout>
