--- a/Dreamy/app/src/main/res/layout/dreamy_form.xml
+++ b/Dreamy/app/src/main/res/layout/dreamy_form.xml
@@ -31,25 +31,16 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="@string/milestones"
-            android:id="@+id/milestone"
-            android:layout_toStartOf="@+id/dreamInput"
-            android:textIsSelectable="false"
-            android:layout_above="@+id/addMilestone"
-            android:layout_alignParentLeft="true"
-            android:layout_alignRight="@+id/milestoneInput" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/milestoneInput"
-            android:width="200dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true" />
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/milestoneInput"
+        android:hint="add your milestones"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:width="200dp"
+        android:layout_marginTop="70dp"
+        android:layout_below="@+id/dreamInput"
+        android:layout_alignParentLeft="true" />
 
     <ImageButton
         android:layout_width="wrap_content"
