--- a/Dreamy/app/src/main/res/layout/activity_main.xml
+++ b/Dreamy/app/src/main/res/layout/activity_main.xml
@@ -43,9 +43,9 @@
         android:layout_alignParentLeft="false"
         android:layout_alignParentStart="true"
         android:id="@+id/linearLayout"
-        android:background="#84c3bbb7"
         android:layout_alignParentEnd="false"
-        android:gravity="center|center_horizontal">
+        android:gravity="center|center_horizontal"
+        android:baselineAligned="true">
 
         <ImageButton
             android:layout_width="60dip"
