--- a/Dreamy/app/src/main/res/layout/log_in.xml
+++ b/Dreamy/app/src/main/res/layout/log_in.xml
@@ -65,5 +65,16 @@
             android:layout_alignRight="@+id/textView4"
             android:layout_alignEnd="@+id/textView4" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="OR"
+            android:id="@+id/textView"
+            android:enabled="false"
+            android:layout_alignBaseline="@+id/button2"
+            android:layout_alignBottom="@+id/button2"
+            android:layout_centerHorizontal="true" />
+
     </RelativeLayout>
 </RelativeLayout>
