Dreamy Form - remove add button
- modify dreamy_form.xml

--- a/Dreamy/app/src/main/res/layout/dreamy_form.xml
+++ b/Dreamy/app/src/main/res/layout/dreamy_form.xml
@@ -40,23 +40,18 @@
         android:width="200dp"
         android:layout_marginTop="70dp"
         android:layout_below="@+id/dreamInput"
-        android:layout_alignParentLeft="true" />
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/addMilestone"
-        android:layout_alignBottom="@+id/milestoneInput"
-        android:layout_alignParentRight="true"
-        android:background="@drawable/add_form"/>
+        android:layout_alignParentLeft="true"
+        android:layout_toLeftOf="@+id/saveDream"
+        android:layout_toStartOf="@+id/saveDream" />
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/container"
-        android:layout_below="@+id/addMilestone"
-        android:layout_alignRight="@+id/saveDream"></LinearLayout>
+        android:layout_alignRight="@+id/saveDream"
+        android:layout_alignEnd="@+id/saveDream"
+        android:layout_below="@+id/milestoneInput"></LinearLayout>
 
     <ScrollView
         android:layout_width="wrap_content"
