--- a/Dreamy/app/src/main/res/layout/log_in.xml
+++ b/Dreamy/app/src/main/res/layout/log_in.xml
@@ -11,29 +11,8 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="87dp"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="password"
-            android:id="@+id/textView4"
-            android:textSize="45dp"
-            android:layout_centerVertical="true"
-            android:layout_alignRight="@+id/textView5"
-            android:layout_alignEnd="@+id/textView5" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="username"
-            android:id="@+id/textView5"
-            android:textSize="45dp"
-            android:layout_above="@+id/textView4"
-            android:layout_centerHorizontal="true"
-            android:singleLine="true" />
+        android:layout_alignParentEnd="true"
+        android:id="@+id/">
 
         <TextView
             android:text="@string/app_name"
@@ -46,35 +25,42 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true" />
 
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/editText"
+            android:layout_column="2"
+            android:text="username"
+            android:layout_marginTop="75dp"
+            android:textSize="30dp"
+            android:layout_below="@+id/textView3"
+            android:layout_alignRight="@+id/textView3"
+            android:layout_alignEnd="@+id/textView3"
+            android:layout_alignLeft="@+id/textView3"
+            android:layout_alignStart="@+id/textView3" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/editText2"
+            android:layout_column="2"
+            android:text="password"
+            android:textSize="30dp"
+            android:layout_centerVertical="true"
+            android:layout_alignLeft="@+id/editText"
+            android:layout_alignStart="@+id/editText"
+            android:layout_alignRight="@+id/editText"
+            android:layout_alignEnd="@+id/editText" />
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="sign in"
             android:id="@+id/button"
-            android:layout_marginTop="50dp"
-            android:layout_below="@+id/textView4"
-            android:layout_alignLeft="@+id/textView5"
-            android:layout_alignStart="@+id/textView5" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="sign up"
-            android:id="@+id/button2"
-            android:layout_alignTop="@+id/button"
-            android:layout_alignRight="@+id/textView4"
-            android:layout_alignEnd="@+id/textView4" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="OR"
-            android:id="@+id/textView"
-            android:enabled="false"
-            android:layout_alignBaseline="@+id/button2"
-            android:layout_alignBottom="@+id/button2"
-            android:layout_centerHorizontal="true" />
+            android:layout_marginTop="65dp"
+            android:layout_below="@+id/editText2"
+            android:layout_alignRight="@+id/editText2"
+            android:layout_alignEnd="@+id/editText2" />
 
     </RelativeLayout>
 </RelativeLayout>
