--- a/Dreamy/app/src/main/res/layout/sign_up.xml
+++ b/Dreamy/app/src/main/res/layout/sign_up.xml
@@ -14,29 +14,6 @@
         android:layout_alignParentEnd="true">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="password"
-            android:id="@+id/textView4"
-            android:textSize="35dp"
-            android:layout_centerVertical="true"
-            android:layout_alignLeft="@+id/textView5"
-            android:layout_alignStart="@+id/textView5"
-            android:textIsSelectable="true" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="username"
-            android:id="@+id/textView5"
-            android:textSize="35dp"
-            android:layout_above="@+id/textView4"
-            android:layout_centerHorizontal="true"
-            android:singleLine="true" />
-
-        <TextView
             android:text="@string/app_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -52,24 +29,53 @@
             android:layout_height="wrap_content"
             android:text="sign up"
             android:id="@+id/button2"
-            android:layout_below="@+id/textView4"
-            android:layout_alignRight="@+id/textView5"
-            android:layout_alignEnd="@+id/textView5"
-            android:layout_marginTop="38dp" />
+            android:layout_marginRight="68dp"
+            android:layout_below="@+id/editText3"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="44dp" />
 
-
-
-        <TextView
+        <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="email"
-            android:id="@+id/textView2"
-            android:textSize="35dp"
-            android:singleLine="true"
-            android:layout_above="@+id/textView5"
-            android:layout_alignLeft="@+id/textView4"
-            android:layout_alignStart="@+id/textView4" />
+            android:id="@+id/editText"
+            android:layout_marginTop="75dp"
+            android:layout_column="2"
+            android:text="email                           "
+            android:layout_toStartOf="@+id/button2"
+            android:textSize="30dp"
+            android:layout_below="@+id/textView3"
+            android:layout_alignRight="@+id/button2"
+            android:layout_alignEnd="@+id/button2" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/editText2"
+            android:layout_column="2"
+            android:text="username"
+            android:layout_toStartOf="@+id/button2"
+            android:layout_below="@+id/editText"
+            android:layout_alignLeft="@+id/editText"
+            android:layout_alignStart="@+id/editText"
+            android:layout_alignRight="@+id/editText"
+            android:layout_alignEnd="@+id/editText"
+            android:textSize="30dp" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/editText3"
+            android:layout_column="2"
+            android:text="password"
+            android:layout_toStartOf="@+id/button2"
+            android:layout_below="@+id/editText2"
+            android:layout_alignLeft="@+id/editText2"
+            android:layout_alignStart="@+id/editText2"
+            android:textSize="30dp"
+            android:layout_alignRight="@+id/button2"
+            android:layout_alignEnd="@+id/button2" />
+
 
     </RelativeLayout>
 </RelativeLayout>
