--- a/Dreamy/app/src/main/res/layout/activity_main.xml
+++ b/Dreamy/app/src/main/res/layout/activity_main.xml
@@ -98,4 +98,14 @@
 
     </LinearLayout>
 
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/adddreamButton"
+        android:layout_toEndOf="@+id/textAdd"
+        android:background="@drawable/adddream"
+        android:layout_below="@+id/textAdd"
+        android:layout_toRightOf="@+id/textAdd"
+        android:layout_marginTop="41dp" />
+
 </RelativeLayout>
