--- a/Dreamy/app/src/main/res/layout/log_in.xml
+++ b/Dreamy/app/src/main/res/layout/log_in.xml
@@ -11,8 +11,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="87dp"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:id="@+id/">
+        android:layout_alignParentEnd="true">
 
         <TextView
             android:text="@string/app_name"
@@ -56,7 +55,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="sign in"
-            android:id="@+id/button"
+            android:id="@+id/signin"
+            android:onClick="goToMain"
             android:layout_marginTop="65dp"
             android:layout_below="@+id/editText2"
             android:layout_alignRight="@+id/editText2"
