--- a/Dreamy/app/src/main/res/layout/freetime.xml
+++ b/Dreamy/app/src/main/res/layout/freetime.xml
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:text="text"
         android:id="@+id/button2"
-        android:layout_toStartOf="@+id/button3"
+        android:layout_toStartOf="@+id/signup"
         android:layout_below="@+id/button"
         android:layout_alignLeft="@+id/button4"
         android:layout_alignStart="@+id/button4"
@@ -45,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="gallery"
-        android:id="@+id/button3"
+        android:id="@+id/signup"
         android:layout_toStartOf="@+id/button"
         android:layout_marginTop="79dp"
         android:layout_below="@+id/button2"
@@ -57,7 +57,7 @@
         android:text="sketch"
         android:id="@+id/button4"
         android:layout_marginTop="67dp"
-        android:layout_below="@+id/button3"
+        android:layout_below="@+id/signup"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="51dp" />
