--- a/Dreamy/app/src/main/res/layout/log_in.xml
+++ b/Dreamy/app/src/main/res/layout/log_in.xml
@@ -53,7 +53,9 @@
             android:layout_alignLeft="@+id/editText"
             android:layout_alignStart="@+id/editText"
             android:layout_alignRight="@+id/editText"
-            android:layout_alignEnd="@+id/editText" />
+            android:layout_alignEnd="@+id/editText"
+            android:inputType="textPassword"
+            android:visibility="visible" />
 
         <Button
             android:layout_width="wrap_content"
