--- a/Dreamy/app/src/main/res/layout/todolist.xml
+++ b/Dreamy/app/src/main/res/layout/todolist.xml
@@ -6,6 +6,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout">
 
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/scrollView2" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -130,4 +135,5 @@
             android:layout_marginLeft="20dip" />
 
     </LinearLayout>
+
 </RelativeLayout>
