Integrate Dreamy Form to Home
Open dreamy form when "plus cloud" is tapped/clicked

--- a/Dreamy/app/src/main/res/layout/activity_main.xml
+++ b/Dreamy/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,7 @@
         android:id="@+id/adddreamButton"
         android:layout_toEndOf="@+id/textAdd"
         android:background="@drawable/adddream"
+        android:onClick="gotoDreamyForm"
         android:layout_below="@+id/textAdd"
         android:layout_toRightOf="@+id/textAdd"
         android:layout_marginTop="41dp" />
