Minor changes on log_in.xml and sign_up.xml

--- a/Dreamy/app/src/main/res/layout/sign_up.xml
+++ b/Dreamy/app/src/main/res/layout/sign_up.xml
@@ -41,7 +41,7 @@
             android:id="@+id/editText"
             android:layout_marginTop="75dp"
             android:layout_column="2"
-            android:text="email                           "
+            android:hint="email                           "
             android:layout_toStartOf="@+id/button2"
             android:textSize="30dp"
             android:layout_below="@+id/textView3"
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/editText2"
             android:layout_column="2"
-            android:text="username"
+            android:hint="username"
             android:layout_toStartOf="@+id/button2"
             android:layout_below="@+id/editText"
             android:layout_alignLeft="@+id/editText"
@@ -67,7 +67,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/editText3"
             android:layout_column="2"
-            android:text="password"
+            android:hint="password"
             android:inputType="textPassword"
             android:layout_toStartOf="@+id/button2"
             android:layout_below="@+id/editText2"
