--- a/Dreamy/app/src/main/res/layout/log_in.xml
+++ b/Dreamy/app/src/main/res/layout/log_in.xml
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/editText"
             android:layout_column="2"
-            android:text="username"
+            android:hint="username"
             android:layout_marginTop="75dp"
             android:textSize="30dp"
             android:layout_below="@+id/textView3"
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/editText2"
             android:layout_column="2"
-            android:text="password"
+            android:hint="password"
             android:textSize="30dp"
             android:layout_centerVertical="true"
             android:layout_alignLeft="@+id/editText"
