--- a/Dreamy/app/src/main/res/layout/sign_up.xml
+++ b/Dreamy/app/src/main/res/layout/sign_up.xml
@@ -28,54 +28,69 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="sign up"
-            android:id="@+id/button2"
+            android:id="@+id/createAccount"
             android:layout_marginRight="68dp"
-            android:layout_below="@+id/editText3"
+            android:onClick="createAccount"
+            android:layout_marginTop="47dp"
+            android:layout_below="@+id/password"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="44dp" />
+            android:layout_alignParentEnd="true" />
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/editText"
-            android:layout_marginTop="75dp"
+            android:id="@+id/email"
+            android:layout_marginTop="72dp"
             android:layout_column="2"
-            android:hint="email                           "
+            android:hint="email"
             android:layout_toStartOf="@+id/button2"
             android:textSize="30dp"
             android:layout_below="@+id/textView3"
-            android:layout_alignRight="@+id/button2"
-            android:layout_alignEnd="@+id/button2" />
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="42dp"
+            android:layout_alignRight="@+id/textView3"
+            android:layout_alignEnd="@+id/textView3"/>
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/editText2"
+            android:id="@+id/username"
             android:layout_column="2"
             android:hint="username"
             android:layout_toStartOf="@+id/button2"
-            android:layout_below="@+id/editText"
-            android:layout_alignLeft="@+id/editText"
-            android:layout_alignStart="@+id/editText"
-            android:layout_alignRight="@+id/editText"
-            android:layout_alignEnd="@+id/editText"
-            android:textSize="30dp" />
+            android:textSize="30dp"
+            android:layout_below="@+id/email"
+            android:layout_alignLeft="@+id/password"
+            android:layout_alignStart="@+id/password"
+            android:layout_alignRight="@+id/email"
+            android:layout_alignEnd="@+id/email"/>
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/editText3"
+            android:id="@+id/password"
             android:layout_column="2"
             android:hint="password"
             android:inputType="textPassword"
             android:layout_toStartOf="@+id/button2"
-            android:layout_below="@+id/editText2"
-            android:layout_alignLeft="@+id/editText2"
-            android:layout_alignStart="@+id/editText2"
             android:textSize="30dp"
-            android:layout_alignRight="@+id/button2"
-            android:layout_alignEnd="@+id/button2" />
+            android:layout_centerVertical="true"
+            android:layout_alignLeft="@+id/email"
+            android:layout_alignStart="@+id/email"
+            android:layout_alignRight="@+id/email"
+            android:layout_alignEnd="@+id/email"/>
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:hint="confirm password"
+            android:ems="10"
+            android:id="@+id/passwordConf"
+            android:layout_below="@+id/password"
+            android:layout_alignLeft="@+id/password"
+            android:layout_alignStart="@+id/password" />
 
 
     </RelativeLayout>
