--- a/Dreamy/app/src/main/res/layout/todolist.xml
+++ b/Dreamy/app/src/main/res/layout/todolist.xml
@@ -34,7 +34,7 @@
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/scrollView"
+        android:id="@+id/scrolled"
         android:layout_below="@+id/textTitle"
         android:layout_alignParentLeft="true"
         android:layout_marginBottom="70dip">
