To do list: text field scaling

--- a/Dreamy/app/src/main/res/layout/todolist.xml
+++ b/Dreamy/app/src/main/res/layout/todolist.xml
@@ -47,7 +47,7 @@
             android:layout_marginLeft="30dp">
 
             <TableRow
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/rowTask">
 
